Turn off languageServer for 0.12 support in plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "terraform.languageServer": {
-        "enabled": true,
-        "args": []
-    }
+    // "terraform.languageServer": {
+    //     "enabled": true,
+    //     "args": []
+    // }
 }
